--- a/yct_app/pubspec.yaml
+++ b/yct_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.2+1
   http: ^0.12.0+4
+  flutter_speed_dial: ^1.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,6 +62,7 @@ flutter:
     - assets/images/user/bottom_bar/web_view/website.png
     - assets/images/user/bottom_bar/google_map/check_location.png
     - assets/images/user/commom/railwayLogo.png
+    - assets/images/user/map/circularMap.jpg
     - assets/temp/tempnews.jpg
     - assets/temp/tempnews1.jpg
     - assets/temp/tempnews2.jpg
